--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:15:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@6892b3b6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@11249189</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:15:58</td>   <td>4781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@6892b3b6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@11249189</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:15:57</td>   <td>3916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithValidCredential()[pri:1, instance:sample.Login@6892b3b6]">verifyUserLoginWithValidCredential</td> 
-  <td>main@11249189</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.afterClass()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>29</td> <td title="&lt;&lt;Login.afterSuite()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;Login.afterTest()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3559</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.beforeClass()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3602</td> <td title="&gt;&gt;Login.beforeSuite()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3585</td> <td>&nbsp;</td><td title="&gt;&gt;Login.beforeTest()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>-175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/07 16:44:37</td>   <td>-925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithInvalidCredentials()[pri:4, instance:sample.Login@28261e8e]">verifyUserLoginWithInvalidCredentials</td> 
+  <td>main@1947185929</td>   <td></td> </tr>
 </table>
