--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="696385">  <td>22/12/07 19:07:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiBrowser.afterTest()[pri:0, instance:cross_Browser.MultiBrowser@5149d738]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
-<tr bgcolor="696385">  <td>22/12/07 19:07:25</td>   <td>8744</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiBrowser.afterTest()[pri:0, instance:cross_Browser.MultiBrowser@6e9a5ed8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
-<tr bgcolor="696385">  <td>22/12/07 19:07:01</td>   <td>-15031</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiBrowser.beforeTest(java.lang.String)[pri:0, instance:cross_Browser.MultiBrowser@5149d738]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
-<tr bgcolor="696385">  <td>22/12/07 19:07:18</td>   <td>1387</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiBrowser.beforeTest(java.lang.String)[pri:0, instance:cross_Browser.MultiBrowser@6e9a5ed8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
-<tr bgcolor="696385">  <td>22/12/07 19:07:16</td>   <td>-361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiBrowser.click_Carousel()[pri:0, instance:cross_Browser.MultiBrowser@5149d738]">click_Carousel</td> 
-  <td>main@84113572</td>   <td></td> </tr>
-<tr bgcolor="696385">  <td>22/12/07 19:07:25</td>   <td>8588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiBrowser.click_Carousel()[pri:0, instance:cross_Browser.MultiBrowser@6e9a5ed8]">click_Carousel</td> 
-  <td>main@84113572</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/08 13:26:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginParameterization.LoginParams(java.lang.String,java.lang.String)[pri:0, instance:parameters.LoginParameterization@644baf4a]">LoginParams</td> 
+  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/08 13:26:36</td>   <td>-3078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginParameterization.setUp(java.lang.String)[pri:0, instance:parameters.LoginParameterization@644baf4a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1774720883</td>   <td></td> </tr>
 </table>
