--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,074</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">23,037</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parameters.LoginParameterization</td><td><a href="#m0">LoginParams</a></td><td rowspan="1">1670486199819</td><td rowspan="1">931</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">sample.Login</td><td><a href="#m0">verifyUserLoginWithInvalidCredentials</a></td><td rowspan="1">1670495070651</td><td rowspan="1">1217</td></tr><tr class="passedeven"><td><a href="#m1">verifyUserLoginWithInvalidUserNameAndValidPassword</a></td><td rowspan="1">1670495063096</td><td rowspan="1">1181</td></tr><tr class="passedeven"><td><a href="#m2">verifyUserLoginWithValidCredential</a></td><td rowspan="1">1670495058936</td><td rowspan="1">1326</td></tr><tr class="passedeven"><td><a href="#m3">verifyUserLoginWithValidUserNameAndInvalidPassword</a></td><td rowspan="1">1670495066842</td><td rowspan="1">1362</td></tr><tr class="passedeven"><td><a href="#m4">verifyUserLoginWithoutGivingCredentials</a></td><td rowspan="1">1670495074430</td><td rowspan="1">1004</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">parameters.LoginParameterization#LoginParams</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>yaseswiniy@gmail.com</td><td>yashu12345!</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">sample.Login#verifyUserLoginWithInvalidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">sample.Login#verifyUserLoginWithInvalidUserNameAndValidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">sample.Login#verifyUserLoginWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">sample.Login#verifyUserLoginWithValidUserNameAndInvalidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">sample.Login#verifyUserLoginWithoutGivingCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
