--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3384</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.beforeClass()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>204</td> <td title="&lt;&lt;Login.afterSuite()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3427</td> <td title="&gt;&gt;Login.beforeSuite()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>177</td> <td>&nbsp;</td><td title="&lt;&lt;Login.afterTest()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:38</td>   <td>175</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.afterClass()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:37</td>   <td>-750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithInvalidCredentials()[pri:4, instance:sample.Login@28261e8e]">verifyUserLoginWithInvalidCredentials</td> 
-  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:44:35</td>   <td>-3410</td> <td>&nbsp;</td><td title="&gt;&gt;Login.beforeTest()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:32</td>   <td>-3247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:32</td>   <td>-3247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>316</td> <td>&nbsp;</td><td title="&lt;&lt;Login.afterTest()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:23</td>   <td>-12341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithInvalidUserNameAndValidPassword()[pri:2, instance:sample.Login@196a42c3]">verifyUserLoginWithInvalidUserNameAndValidPassword</td> 
+  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:30</td>   <td>-4786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithInvalidCredentials()[pri:4, instance:sample.Login@196a42c3]">verifyUserLoginWithInvalidCredentials</td> 
+  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>315</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.afterClass()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:26</td>   <td>-8595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithValidUserNameAndInvalidPassword()[pri:3, instance:sample.Login@196a42c3]">verifyUserLoginWithValidUserNameAndInvalidPassword</td> 
+  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:18</td>   <td>-16501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithValidCredential()[pri:1, instance:sample.Login@196a42c3]">verifyUserLoginWithValidCredential</td> 
+  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:32</td>   <td>-3247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:12</td>   <td>-22732</td> <td title="&gt;&gt;Login.beforeSuite()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:32</td>   <td>-3247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>463</td> <td title="&lt;&lt;Login.afterSuite()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:12</td>   <td>-22703</td> <td>&nbsp;</td><td title="&gt;&gt;Login.beforeTest()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:12</td>   <td>-22651</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.beforeClass()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:32</td>   <td>-3247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@196a42c3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:34</td>   <td>-1007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithoutGivingCredentials()[pri:5, instance:sample.Login@196a42c3]">verifyUserLoginWithoutGivingCredentials</td> 
+  <td>main@1534694976</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>22/12/08 15:54:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@196a42c3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1534694976</td>   <td></td> </tr>
 </table>
