--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,21 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">23,037</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">LoginTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">57</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">RegisterTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6</td><td></td><td></td></tr>
+<tr><td><a href="#t2">SearchTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">6</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">71</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">sample.Login</td><td><a href="#m0">verifyUserLoginWithInvalidCredentials</a></td><td rowspan="1">1670495070651</td><td rowspan="1">1217</td></tr><tr class="passedeven"><td><a href="#m1">verifyUserLoginWithInvalidUserNameAndValidPassword</a></td><td rowspan="1">1670495063096</td><td rowspan="1">1181</td></tr><tr class="passedeven"><td><a href="#m2">verifyUserLoginWithValidCredential</a></td><td rowspan="1">1670495058936</td><td rowspan="1">1326</td></tr><tr class="passedeven"><td><a href="#m3">verifyUserLoginWithValidUserNameAndInvalidPassword</a></td><td rowspan="1">1670495066842</td><td rowspan="1">1362</td></tr><tr class="passedeven"><td><a href="#m4">verifyUserLoginWithoutGivingCredentials</a></td><td rowspan="1">1670495074430</td><td rowspan="1">1004</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">grouping.LoginGroup</td><td><a href="#m0">LoginWithInValidCredentials</a></td><td rowspan="1">1670914489559</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">LoginWithValidCredentials</a></td><td rowspan="1">1670914489547</td><td rowspan="1">9</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">RegisterTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">grouping.Register</td><td><a href="#m2">registerByProvidingDuplicateEmailAddress</a></td><td rowspan="1">1670914489646</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">registerByProvidingOnlyMandatoryFields</a></td><td rowspan="1">1670914489643</td><td rowspan="1">1</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">SearchTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">grouping.Search</td><td><a href="#m4">searchWithOutAnySearchItem</a></td><td rowspan="1">1670914489663</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">searchWithValidProduct</a></td><td rowspan="1">1670914489659</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">sample.Login#verifyUserLoginWithInvalidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">sample.Login#verifyUserLoginWithInvalidUserNameAndValidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">sample.Login#verifyUserLoginWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">sample.Login#verifyUserLoginWithValidUserNameAndInvalidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">sample.Login#verifyUserLoginWithoutGivingCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>LoginTest</h2><h3 id="m0">grouping.LoginGroup#LoginWithInValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">grouping.LoginGroup#LoginWithValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>RegisterTest</h2><h3 id="m2">grouping.Register#registerByProvidingDuplicateEmailAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">grouping.Register#registerByProvidingOnlyMandatoryFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SearchTest</h2><h3 id="m4">grouping.Search#searchWithOutAnySearchItem</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">grouping.Search#searchWithValidProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
