--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="696385">  <td>22/12/08 13:26:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginParameterization.LoginParams(java.lang.String,java.lang.String)[pri:0, instance:parameters.LoginParameterization@644baf4a]">LoginParams</td> 
+<tr bgcolor="a98386">  <td>22/12/13 12:24:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithInValidCredentials()[pri:0, instance:grouping.LoginGroup@63376bed]">LoginWithInValidCredentials</td> 
   <td>main@1774720883</td>   <td></td> </tr>
-<tr bgcolor="696385">  <td>22/12/08 13:26:36</td>   <td>-3078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginParameterization.setUp(java.lang.String)[pri:0, instance:parameters.LoginParameterization@644baf4a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/13 12:24:49</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithValidCredentials()[pri:0, instance:grouping.LoginGroup@63376bed]">LoginWithValidCredentials</td> 
+  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="94a4fe">  <td>22/12/13 12:24:49</td>   <td>87</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingDuplicateEmailAddress()[pri:0, instance:grouping.Register@57a78e3]">registerByProvidingDuplicateEmailAddress</td> 
+  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="94a4fe">  <td>22/12/13 12:24:49</td>   <td>84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingOnlyMandatoryFields()[pri:0, instance:grouping.Register@57a78e3]">registerByProvidingOnlyMandatoryFields</td> 
+  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="6c8bb3">  <td>22/12/13 12:24:49</td>   <td>104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithOutAnySearchItem()[pri:0, instance:grouping.Search@7ce026d3]">searchWithOutAnySearchItem</td> 
+  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="6c8bb3">  <td>22/12/13 12:24:49</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithValidProduct()[pri:0, instance:grouping.Search@7ce026d3]">searchWithValidProduct</td> 
+  <td>main@1774720883</td>   <td></td> </tr>
 </table>
