Grouping tests in testng using groups attribute

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -12,15 +12,18 @@
 <tr>
 <td>&nbsp;</td>
 <td>searchWithOutAnySearchItem</td>
-<td>&nbsp;</td></tr>
+<td>all search regression smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>searchWithValidProduct</td>
-<td>&nbsp;</td></tr>
+<td>all search regression smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>searchWithInValidProduct</td>
-<td>&nbsp;</td></tr>
+<td>all search regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -42,19 +45,23 @@
 <tr>
 <td>&nbsp;</td>
 <td>registerByNotProvidingAnyFields</td>
-<td>&nbsp;</td></tr>
+<td>all regression sanity register </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>registerByProvidingOnlyMandatoryFields</td>
-<td>&nbsp;</td></tr>
+<td>all regression smoke sanity register </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>registerByProvidingAllFields</td>
-<td>&nbsp;</td></tr>
+<td>all regression sanity register </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>registerByProvidingDuplicateEmailAddress</td>
-<td>&nbsp;</td></tr>
+<td>all smoke register </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -76,23 +83,28 @@
 <tr>
 <td>&nbsp;</td>
 <td>LoginWithNoCredentials</td>
-<td>&nbsp;</td></tr>
+<td>all regression smoke login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>LoginWithInValidUserNameAndValidPassword</td>
-<td>&nbsp;</td></tr>
+<td>all regression sanity login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>LoginWithValidCredentials</td>
-<td>&nbsp;</td></tr>
+<td>all regression smoke sanity login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>LoginWithValidUserNameAndInvalidPassword</td>
-<td>&nbsp;</td></tr>
+<td>all regression sanity login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>LoginWithInValidCredentials</td>
-<td>&nbsp;</td></tr>
+<td>all regression sanity login </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
