--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a98386">  <td>22/12/13 12:24:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithInValidCredentials()[pri:0, instance:grouping.LoginGroup@63376bed]">LoginWithInValidCredentials</td> 
-  <td>main@1774720883</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/13 12:24:49</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithValidCredentials()[pri:0, instance:grouping.LoginGroup@63376bed]">LoginWithValidCredentials</td> 
-  <td>main@1774720883</td>   <td></td> </tr>
-<tr bgcolor="94a4fe">  <td>22/12/13 12:24:49</td>   <td>87</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingDuplicateEmailAddress()[pri:0, instance:grouping.Register@57a78e3]">registerByProvidingDuplicateEmailAddress</td> 
-  <td>main@1774720883</td>   <td></td> </tr>
-<tr bgcolor="94a4fe">  <td>22/12/13 12:24:49</td>   <td>84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingOnlyMandatoryFields()[pri:0, instance:grouping.Register@57a78e3]">registerByProvidingOnlyMandatoryFields</td> 
-  <td>main@1774720883</td>   <td></td> </tr>
-<tr bgcolor="6c8bb3">  <td>22/12/13 12:24:49</td>   <td>104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithOutAnySearchItem()[pri:0, instance:grouping.Search@7ce026d3]">searchWithOutAnySearchItem</td> 
-  <td>main@1774720883</td>   <td></td> </tr>
-<tr bgcolor="6c8bb3">  <td>22/12/13 12:24:49</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithValidProduct()[pri:0, instance:grouping.Search@7ce026d3]">searchWithValidProduct</td> 
-  <td>main@1774720883</td>   <td></td> </tr>
+<tr bgcolor="93b2b6">  <td>22/12/13 15:00:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithNoCredentials()[pri:5, instance:grouping.LoginGroup@14028087]">LoginWithNoCredentials</td> 
+  <td>main@1626343059</td>   <td></td> </tr>
+<tr bgcolor="93b2b6">  <td>22/12/13 15:00:06</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithValidCredentials()[pri:1, instance:grouping.LoginGroup@14028087]">LoginWithValidCredentials</td> 
+  <td>main@1626343059</td>   <td></td> </tr>
+<tr bgcolor="bb87f3">  <td>22/12/13 15:00:06</td>   <td>-92</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingDuplicateEmailAddress()[pri:4, instance:grouping.Register@4145bad8]">registerByProvidingDuplicateEmailAddress</td> 
+  <td>main@1626343059</td>   <td></td> </tr>
+<tr bgcolor="bb87f3">  <td>22/12/13 15:00:06</td>   <td>-121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingOnlyMandatoryFields()[pri:1, instance:grouping.Register@4145bad8]">registerByProvidingOnlyMandatoryFields</td> 
+  <td>main@1626343059</td>   <td></td> </tr>
+<tr bgcolor="b0fbeb">  <td>22/12/13 15:00:06</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithOutAnySearchItem()[pri:3, instance:grouping.Search@7e057f43]">searchWithOutAnySearchItem</td> 
+  <td>main@1626343059</td>   <td></td> </tr>
+<tr bgcolor="b0fbeb">  <td>22/12/13 15:00:06</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithValidProduct()[pri:1, instance:grouping.Search@7e057f43]">searchWithValidProduct</td> 
+  <td>main@1626343059</td>   <td></td> </tr>
 </table>
