Grouping - Meta Groups and Notes

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,20 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">RegisterTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">90</td><td>smoke</td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">LoginTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8</td><td>smoke</td><td></td></tr>
-<tr><td><a href="#t2">SearchTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8</td><td>smoke</td><td></td></tr>
-<tr><th>Total</th><th class="num">6</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">106</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">RegisterTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">157</td><td>smokeandregression, regression, smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">RegisterTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">grouping.Register</td><td><a href="#m0">registerByProvidingDuplicateEmailAddress</a></td><td rowspan="1">1670923806874</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">registerByProvidingOnlyMandatoryFields</a></td><td rowspan="1">1670923806846</td><td rowspan="1">15</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">LoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">grouping.LoginGroup</td><td><a href="#m2">LoginWithNoCredentials</a></td><td rowspan="1">1670923806966</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">LoginWithValidCredentials</a></td><td rowspan="1">1670923806962</td><td rowspan="1">2</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">SearchTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">grouping.Search</td><td><a href="#m4">searchWithOutAnySearchItem</a></td><td rowspan="1">1670923806977</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">searchWithValidProduct</a></td><td rowspan="1">1670923806974</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">RegisterTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">grouping.Register</td><td><a href="#m0">registerByNotProvidingAnyFields</a></td><td rowspan="1">1671089006023</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">registerByProvidingAllFields</a></td><td rowspan="1">1671089006017</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">registerByProvidingDuplicateEmailAddress</a></td><td rowspan="1">1671089006030</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">registerByProvidingOnlyMandatoryFields</a></td><td rowspan="1">1671089005978</td><td rowspan="1">20</td></tr></tbody>
 </table>
-<h2>RegisterTest</h2><h3 id="m0">grouping.Register#registerByProvidingDuplicateEmailAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">grouping.Register#registerByProvidingOnlyMandatoryFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>LoginTest</h2><h3 id="m2">grouping.LoginGroup#LoginWithNoCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">grouping.LoginGroup#LoginWithValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>SearchTest</h2><h3 id="m4">grouping.Search#searchWithOutAnySearchItem</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">grouping.Search#searchWithValidProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>RegisterTest</h2><h3 id="m0">grouping.Register#registerByNotProvidingAnyFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">grouping.Register#registerByProvidingAllFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">grouping.Register#registerByProvidingDuplicateEmailAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">grouping.Register#registerByProvidingOnlyMandatoryFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
