--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb87f3">  <td>22/12/13 15:00:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingDuplicateEmailAddress()[pri:4, instance:grouping.Register@4145bad8]">registerByProvidingDuplicateEmailAddress</td> 
-  <td>main@1626343059</td>   <td></td> </tr>
-<tr bgcolor="bb87f3">  <td>22/12/13 15:00:06</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingOnlyMandatoryFields()[pri:1, instance:grouping.Register@4145bad8]">registerByProvidingOnlyMandatoryFields</td> 
-  <td>main@1626343059</td>   <td></td> </tr>
-<tr bgcolor="93b2b6">  <td>22/12/13 15:00:06</td>   <td>92</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithNoCredentials()[pri:5, instance:grouping.LoginGroup@14028087]">LoginWithNoCredentials</td> 
-  <td>main@1626343059</td>   <td></td> </tr>
-<tr bgcolor="93b2b6">  <td>22/12/13 15:00:06</td>   <td>88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGroup.LoginWithValidCredentials()[pri:1, instance:grouping.LoginGroup@14028087]">LoginWithValidCredentials</td> 
-  <td>main@1626343059</td>   <td></td> </tr>
-<tr bgcolor="b0fbeb">  <td>22/12/13 15:00:06</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithValidProduct()[pri:1, instance:grouping.Search@7e057f43]">searchWithValidProduct</td> 
-  <td>main@1626343059</td>   <td></td> </tr>
-<tr bgcolor="b0fbeb">  <td>22/12/13 15:00:06</td>   <td>103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search.searchWithOutAnySearchItem()[pri:3, instance:grouping.Search@7e057f43]">searchWithOutAnySearchItem</td> 
-  <td>main@1626343059</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>22/12/15 12:53:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingDuplicateEmailAddress()[pri:4, instance:grouping.Register@3646a422]">registerByProvidingDuplicateEmailAddress</td> 
+  <td>main@361268035</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>22/12/15 12:53:25</td>   <td>-54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingOnlyMandatoryFields()[pri:1, instance:grouping.Register@3646a422]">registerByProvidingOnlyMandatoryFields</td> 
+  <td>main@361268035</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>22/12/15 12:53:26</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByProvidingAllFields()[pri:2, instance:grouping.Register@3646a422]">registerByProvidingAllFields</td> 
+  <td>main@361268035</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>22/12/15 12:53:26</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.registerByNotProvidingAnyFields()[pri:3, instance:grouping.Register@3646a422]">registerByNotProvidingAnyFields</td> 
+  <td>main@361268035</td>   <td></td> </tr>
 </table>
