Data Providers basics

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">RegisterTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">157</td><td>smokeandregression, regression, smoke</td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">232</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">RegisterTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">grouping.Register</td><td><a href="#m0">registerByNotProvidingAnyFields</a></td><td rowspan="1">1671089006023</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">registerByProvidingAllFields</a></td><td rowspan="1">1671089006017</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">registerByProvidingDuplicateEmailAddress</a></td><td rowspan="1">1671089006030</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">registerByProvidingOnlyMandatoryFields</a></td><td rowspan="1">1671089005978</td><td rowspan="1">20</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">dataProviders.DataProvider_Object</td><td><a href="#m0">m1</a></td><td rowspan="3">1672233227570</td><td rowspan="3">2</td></tr><tr class="passedeven"><td><a href="#m1">m1</a></td></tr><tr class="passedeven"><td><a href="#m2">m1</a></td></tr><tr class="passedeven"><td><a href="#m3">m2</a></td><td rowspan="4">1672233227599</td><td rowspan="4">8</td></tr><tr class="passedeven"><td><a href="#m4">m2</a></td></tr><tr class="passedeven"><td><a href="#m5">m2</a></td></tr><tr class="passedeven"><td><a href="#m6">m2</a></td></tr></tbody>
 </table>
-<h2>RegisterTest</h2><h3 id="m0">grouping.Register#registerByNotProvidingAnyFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">grouping.Register#registerByProvidingAllFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">grouping.Register#registerByProvidingDuplicateEmailAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">grouping.Register#registerByProvidingOnlyMandatoryFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">dataProviders.DataProvider_Object#m1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Potti</td><td>Pilla</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">dataProviders.DataProvider_Object#m1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Yashu</td><td>Baby</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">dataProviders.DataProvider_Object#m1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Pinki</td><td>Ammulu</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">dataProviders.DataProvider_Object#m2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Potti</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">dataProviders.DataProvider_Object#m2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Ammulu</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">dataProviders.DataProvider_Object#m2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Yashu</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">dataProviders.DataProvider_Object#m2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Pinky</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
